app2/deploy/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30002
