app2/deploy/app2-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: "/app2"
    route:
    - destination:
        host: app2-service
        port:
          number: 80
